fix scrollbar

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -325,4 +325,23 @@
         --tw-contain-paint: ;
         --tw-contain-style: ;
     }
+
+    * {
+      scrollbar-width: thin;
+      scrollbar-color:  var(--kzcb-message-user-background) orange;
+    }
+
+    *::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    *::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    *::-webkit-scrollbar-thumb {
+      background-color: var(--kzcb-message-user-background);
+      border-radius: 20px;
+      border: 3px solid var(--kzcb-popover);
+    }
 }
